models, migrations, seed

--- a/app/views/layouts/navigation/_logged_in.html.erb
+++ b/app/views/layouts/navigation/_logged_in.html.erb
@@ -1,4 +1,6 @@
   <div class="navigation">
+    <div>
+    </div>
     <div class="section">
       <%= link_to('Events', root_path) %>
       <%= link_to('Logout', destroy_user_session_path, method: :delete) %>
