--- a/app/assets/stylesheets/navigation.scss
+++ b/app/assets/stylesheets/navigation.scss
@@ -2,16 +2,13 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-
   .section {
     display: flex;
     flex-direction: row;
-    align-items: center;
-    justify-content: space-around;
-    
     a {
       margin: 0px, 15px, 0px, 15px;
       width: 100px;
+      text-align: center;
     }
   }
 }
