--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,1 +1,25 @@
 <p>EVENTS DUDE</p>
+<table>
+  <thead>
+    <tr>
+      <th>Name</th>
+      <th>Date</th>
+      <th>Phone</th>
+      <th>Credit</th>
+      <th>Expiration</th>
+      <th>Duration</th>
+    </tr>
+  </thead>
+  <tbody>
+    <% @events.each do |e| %>
+      <tr>
+        <td><%= e.name %></td>
+        <td><%= e.created_at %></td>
+        <td><%= e.phone_number.phone_number %></td>
+        <td><%= e.credit.identifier%></td>
+        <td><%= e.session_expiry %></td>
+        <td><%= Time.at(e.duration).utc.strftime("%H:%M:%S") %></td>
+      </tr>
+    <% end%>
+  </tbody>
+</table>
