--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -3,22 +3,20 @@
   <thead>
     <tr>
       <th>Name</th>
-      <th>Date</th>
       <th>Phone</th>
-      <th>Credit</th>
       <th>Expiration</th>
       <th>Duration</th>
+      <th>Time Left</th>
     </tr>
   </thead>
   <tbody>
     <% @events.each do |e| %>
       <tr>
-        <td><%= e.name %></td>
-        <td><%= e.created_at %></td>
-        <td><%= e.phone_number.phone_number %></td>
-        <td><%= e.credit.identifier%></td>
-        <td><%= e.session_expiry %></td>
-        <td><%= Time.at(e.duration).utc.strftime("%H:%M:%S") %></td>
+        <td><%= link_to e.name, event_path(e) %></td>
+        <td><%= e.phone_number.phone_formatted %></td>
+        <td><%= e.formatted_expiry %></td>
+        <td><%= Time.zone.at(e.duration).utc.strftime("%H:%M:%S") %></td>
+        <td><%= e.time_left %></td>
       </tr>
     <% end%>
   </tbody>
