--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,23 +1,67 @@
-<p>EVENTS DUDE</p>
-<table>
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th>Phone</th>
-      <th>Expiration</th>
-      <th>Duration</th>
-      <th>Time Left</th>
-    </tr>
-  </thead>
-  <tbody>
-    <% @events.each do |e| %>
-      <tr>
-        <td><%= link_to e.name, event_path(e) %></td>
-        <td><%= e.phone_number.phone_formatted %></td>
-        <td><%= e.formatted_expiry %></td>
-        <td><%= Time.zone.at(e.duration).utc.strftime("%H:%M:%S") %></td>
-        <td><%= e.time_left %></td>
-      </tr>
-    <% end%>
-  </tbody>
-</table>
+<div class="page-container">
+  <div class="one-column">
+    <div class="card">
+      <% if @events.count.zero? %>
+        <h4 class="centered-heading">Welcome!</h4>
+        <p>Let's get you some (free?) credits to get you started! [free credit button woot]</p>
+        <%# <%= link_to "Get Credits", new_credit_path, class: "button" %>
+      <% else %>
+        <h4 class="centered-heading">Events</h4>
+        <%# <%= link_to "Get Credits", new_credit_path, class: "button" %>
+        <%= link_to "New Event", new_event_path, class: "button primary" %>
+      <% end %>
+    </div>
+
+    <% if @events.current.count.positive? %>
+      <div class="card">
+        <h2 class="centered-heading">Current</h2>
+        <table>
+          <thead>
+            <tr>
+              <th>Name</th>
+              <th>Phone</th>
+              <th>Duration</th>
+              <th>Time Left</th>
+            </tr>
+          </thead>
+          <tbody>
+            <% @events.current.each do |e| %>
+              <tr>
+                <td><%= link_to e.name, event_path(e) %></td>
+                <td><%= e.phone_number.phone_formatted %></td>
+                <td><%= Time.zone.at(e.duration).utc.strftime("%H:%M:%S") %></td>
+                <td><%= e.time_left %></td>
+              </tr>
+            <% end %>
+          </tbody>
+        </table>
+      </div>
+    <% end %>
+
+    <% if @events.expired.count.positive? %>
+      <div class="card">
+        <h2 class="centered-heading">Expired</h2>
+        <table>
+          <thead>
+            <tr>
+              <th>Name</th>
+              <th>Date</th>
+              <th>Expiration</th>
+              <th>Duration</th>
+            </tr>
+          </thead>
+          <tbody>
+            <% @events.expired.each do |e| %>
+              <tr>
+                <td><%= link_to e.name, event_path(e) %></td>
+                <td><%= e.created_at.strftime("%D") %></td>
+                <td><%= e.formatted_expiry %></td>
+                <td><%= Time.zone.at(e.duration).utc.strftime("%H:%M:%S") %></td>
+              </tr>
+            <% end %>
+          </tbody>
+        </table>
+      </div>
+    <% end %>
+  </div>
+</div>
