--- a/app/assets/stylesheets/skeleton.scss
+++ b/app/assets/stylesheets/skeleton.scss
@@ -71,9 +71,8 @@ a {
   text-decoration: none;
   color: $primary-dark; }
 a:hover {
-  text-decoration: underline;
+  text-decoration: none;
   color: $primary-light; }
-
 
 /* Buttons
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
@@ -96,7 +95,9 @@ input[type="button"] {
   white-space: nowrap;
   background-color: transparent;
   border-radius: 4px;
-  border: 1px solid #bbb;
+  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+  transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+  // border: 1px solid #bbb;
   cursor: pointer;
   box-sizing: border-box; }
 .button:hover,
@@ -109,6 +110,7 @@ button:focus,
 input[type="submit"]:focus,
 input[type="reset"]:focus,
 input[type="button"]:focus {
+  box-shadow: 0 10px 20px rgba(0,0,0,0.25), 0 7px 7px rgba(0,0,0,0.22);
   color: #333;
   border-color: #888;
   outline: 0; }
@@ -130,9 +132,10 @@ button.primary:focus,
 input[type="submit"].primary:focus,
 input[type="reset"].primary:focus,
 input[type="button"].primary:focus {
-  color: #FFF;
-  background-color: $primary-light;
-  border-color: $primary-light; }
+  box-shadow: 0 10px 20px rgba(0,0,0,0.25), 0 7px 7px rgba(0,0,0,0.22);
+  color: #FFF; }
+  // background-color: $primary-light;
+  // border-color: $primary-light; }
 
 
 /* Forms
