--- a/app/assets/stylesheets/forms.scss
+++ b/app/assets/stylesheets/forms.scss
@@ -6,11 +6,18 @@
     width: 80%;
     max-width: 500px;
     div {
+      position: relative;
       input {
         width: 100%;
       }
       select {
         width: 100%;
+      }
+      span {
+        position: absolute;
+        bottom: 0px;
+        left: 0px;
+        color: red;
       }
     }
   }
