adds flash, turbolinks, coupon_claim

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -2,6 +2,7 @@
 @import 'colors';
 @import 'skeleton';
 @import 'navigation';
+@import 'flash';
 @import 'unauthorized';
 @import 'forms';
 @import 'headings';
