--- a/app/views/purchases/new.html.erb
+++ b/app/views/purchases/new.html.erb
@@ -1,2 +1,8 @@
-<h1>PAY UP</h1>
-<h3>COUPON CLAIM</h3>
+<div class="page-container">
+  <div class="one-column">
+    <div class="card">
+      <h1 class="centered-heading">More Credits</h1>
+      <%= link_to "Have a coupon?", new_claim_coupon_path %>
+    </div>
+  </div>
+</div>
