--- a/app/views/layouts/navigation/_logged_in.html.erb
+++ b/app/views/layouts/navigation/_logged_in.html.erb
@@ -1,6 +1,6 @@
 <div class="navbar">
   <div class="navbar-link navbar-link-brand">
-    Manatee MC
+    Jeeves MC
   </div>
   <div class="navbar-link navbar-link-toggle" data-behavior="toggle-nav" }>
     <p class="fas fa-bars">WHAYT</p>
@@ -8,6 +8,9 @@
   <nav class="navbar-items navbar-items-right">
     <div class="navbar-link">
       <%= link_to('Events', root_path) %>
+    </div>
+    <div class="navbar-link">
+      <%= link_to('Archive', events_expired_path) %>
     </div>
     <div class="navbar-link">
       <%= link_to('Logout', destroy_user_session_path, method: :delete) %>
