--- a/app/views/layouts/navigation/_logged_out.html.erb
+++ b/app/views/layouts/navigation/_logged_out.html.erb
@@ -1,9 +1,19 @@
-  <div class="navigation">
-    <div class="section">
-    </div>
-    <div class="section">
+<div class="navbar">
+  <div class="navbar-link navbar-link-brand">
+    Jeeves MC
+  </div>
+  <div class="navbar-link navbar-link-toggle" data-behavior="toggle-nav" }>
+    <p class="fas fa-bars">WHAYT</p>
+  </div>
+  <nav class="navbar-items navbar-items-right">
+    <div class="navbar-link">
       <%= link_to('Home', root_path) %>
+    </div>
+    <div class="navbar-link">
       <%= link_to('Log In', new_user_session_path) %>
+    </div>
+    <div class="navbar-link">
       <%= link_to('Sign Up', new_user_registration_path)  %>
     </div>
-  </div>
+  </nav>
+</div>
