adds kaminari, preliminary filter flow

--- a/app/views/claim_coupons/new.html.erb
+++ b/app/views/claim_coupons/new.html.erb
@@ -1,7 +1,13 @@
-<h1 class="centered-heading">Claim Coupon</h1>
-<div class="centered-form">
-  <%= simple_form_for @claim_coupon do |f| %>
-    <%= f.input :code, as: :string %>
-    <%= f.submit "Claim", class: "primary" %>
-  <% end %>
+<div class="page-container">
+  <div class="one-column">
+    <div class="card">
+      <h1 class="centered-heading">Claim Coupon</h1>
+      <div class="centered-form">
+        <%= simple_form_for @claim_coupon do |f| %>
+          <%= f.input :code, as: :string %>
+          <%= f.submit "Claim", class: "primary" %>
+        <% end %>
+      </div>
+    </div>
+  </div>
 </div>
