--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -2,18 +2,24 @@
 <p><a href="http://localhost:3000/broadcasts/<%= @event.broadcast_token %>" target="_blank">http://localhost:3000/broadcasts/<%= @event.broadcast_token %></a></p>
 <p>send to someone (no login required) or open for yourself</p>
 
+<div>
+  <%= link_to "Clear", event_path(@event.id) %>
+  <%= link_to "Short", {controller: "events", action: "show", id: @event.id, body_length: "short"} %>
+  <%= link_to "Long", {controller: "events", action: "show", id: @event.id, body_length: "long"} %>
+</div>
+
 <div class="page-container">
   <div class="one-column">
     <% @messages.each do |message| %>
       <div class="card">
-        <p class="card-content">
-          <%= message.body %>
-        </p>
+        <p class="card-content"><%= message.body %></p>
         <div class="card-action">
           <% if message.selected.nil? %>
             <%= link_to "Select",
               select_event_message_path(@event.id, message.id),
               class: "button",
+              id:    "message-button-#{message.id}",
+              data:  { behavior: "mark-as-asked"},
               method: :post,
               remote: true
             %>
@@ -29,5 +35,6 @@
         </div>
       </div>
     <% end %>
+    <%= paginate @messages %>
   </div>
 </div>
