--- a/app/views/layouts/navigation/_logged_in.html.erb
+++ b/app/views/layouts/navigation/_logged_in.html.erb
@@ -13,6 +13,9 @@
       <%= link_to('Archive', events_expired_path) %>
     </div>
     <div class="navbar-link">
+      <%= link_to('Credits', new_purchase_path) %>
+    </div>
+    <div class="navbar-link">
       <%= link_to('Logout', destroy_user_session_path, method: :delete) %>
     </div>
   </nav>
