--- a/app/views/purchases/new.html.erb
+++ b/app/views/purchases/new.html.erb
@@ -1,7 +1,7 @@
 <div class="page-container">
   <div class="one-column">
     <div class="card">
-      <h1 class="centered-heading">More Credits</h1>
+      <h1 class="centered-heading">Credits</h1>
       <%= link_to "Have a coupon?", new_claim_coupon_path %>
     </div>
   </div>
