--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -7,6 +7,16 @@
 @import 'forms';
 @import 'headings';
 
+div.content-wrapper {
+  display: flex;
+  height: 100vh;
+  .content {
+    flex: 1 1 auto;
+    overflow: auto;
+    padding: 0px 8px 0px 8px;
+  }
+}
+
 div.page-container {
   display: flex;
   justify-content: center;
