--- a/app/views/layouts/navigation/_logged_out.html.erb
+++ b/app/views/layouts/navigation/_logged_out.html.erb
@@ -1,11 +1,8 @@
-<div class="navbar">
-  <div class="navbar-link navbar-link-brand">
-    Jeeves MC
+<div id="navbar">
+  <div id="close" data-behavior="close-menu">
+    MC
   </div>
-  <div class="navbar-link navbar-link-toggle" data-behavior="toggle-nav" }>
-    <p class="fas fa-bars">WHAYT</p>
-  </div>
-  <nav class="navbar-items navbar-items-right">
+  <div class="links">
     <div class="navbar-link">
       <%= link_to('Home', root_path) %>
     </div>
@@ -15,5 +12,7 @@
     <div class="navbar-link">
       <%= link_to('Sign Up', new_user_registration_path)  %>
     </div>
-  </nav>
+  </div>
 </div>
+
+
