integrates stripe, some styles too

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -21,8 +21,8 @@ div.page-container {
   display: flex;
   justify-content: center;
   .one-column {
-    width: 90%;
-    max-width: 750px;
+    width: 95%;
+    max-width: 950px;
     div.card {
       margin: 20px 0px 20px 0px;
       padding: 15px;
@@ -40,6 +40,19 @@ div.page-container {
         display: flex;
         justify-content: flex-end;
         align-items: center;
+      }
+      div.card-horizontal {
+        display: flex;
+        flex-flow: row wrap;
+        div.box {
+          flex: 1;
+          min-width: 250px;
+          padding: 8px;
+          margin: 5px;
+          border-radius: 4px;
+          border: 1px solid black;
+          text-align: center;
+        }
       }
     }
   }
