--- a/app/views/events/expired.html.erb
+++ b/app/views/events/expired.html.erb
@@ -1,7 +1,7 @@
 <div class="page-container">
   <div class="one-column">
     <div class="card">
-      <%= link_to "Get Credits", new_purchase_path, class: "button" %>
+      <%= link_to "Get Credits", new_charge_path, class: "button" %>
       <%= link_to "New Event", new_event_path, class: "button primary" %>
     </div>
     <% if @events.count.positive? %>
