--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,7 +29,9 @@
       <% end %>
       <div class="content">
         <div id="hamburger" data-behavior="open-menu">
-          <span>HAM</span>
+          <span></span>
+          <span></span>
+          <span></span>
         </div>
         <%= yield %>
       </div>
