--- a/app/views/layouts/navigation/_logged_out.html.erb
+++ b/app/views/layouts/navigation/_logged_out.html.erb
@@ -1,15 +1,15 @@
 <div id="navbar">
   <div id="close" data-behavior="close-menu">
-    MC
+    <span>X</span>
   </div>
   <div class="links">
-    <div class="navbar-link">
+    <div class="link">
       <%= link_to('Home', root_path) %>
     </div>
-    <div class="navbar-link">
+    <div class="link">
       <%= link_to('Log In', new_user_session_path) %>
     </div>
-    <div class="navbar-link">
+    <div class="link">
       <%= link_to('Sign Up', new_user_registration_path)  %>
     </div>
   </div>
