--- a/app/views/layouts/navigation/_logged_in.html.erb
+++ b/app/views/layouts/navigation/_logged_in.html.erb
@@ -4,7 +4,7 @@
   </div>
   <div class="links">
     <div class="link">
-      <%= link_to('Events', root_path) %>
+      <%= link_to('Current', root_path) %>
     </div>
     <div class="link">
       <%= link_to('Archive', events_expired_path) %>
