--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -42,16 +42,18 @@ div.page-container {
         align-items: center;
       }
       div.card-horizontal {
-        display: flex;
-        flex-flow: row wrap;
-        div.box {
-          flex: 1;
-          min-width: 250px;
-          padding: 8px;
-          margin: 5px;
-          border-radius: 4px;
-          border: 1px solid black;
-          text-align: center;
+        form {
+          display: flex;
+          flex-flow: row wrap;
+          div.box {
+            flex: 1;
+            min-width: 250px;
+            padding: 8px;
+            margin: 5px;
+            border-radius: 4px;
+            border: 1px solid black;
+            text-align: center;
+          }
         }
       }
     }
